# VirtualClinicalTrials

./: README.md  build.bat  license.txt
doc/: VCT_OpenSource_UserGuide.docx  VCT_training_presentation_v.8.5.ppt
test_units/doc/files/: alphaVCT.bst  biblio.bib  biblio.bib.bak  bookVCT.cls  usepackageVCT.tex
test_units/doc/report/: simulation_doc.tex
test_units/doc/report/00_introduction/: introduction.tex
test_units/doc/report/01_Apply3x1DLutModule/: Apply3x1DLutModule.tex
test_units/doc/report/02_SRgbDisplayModule/: SRgbDisplayModule.tex
test_units/doc/report/03_Rgb2XYZDisplayModule/: Rgb2XYZDisplayModule.tex
test_units/doc/report/04_DeltaE2000Module/: DeltaE2000Module.tex
test_units/doc/report/05_ClinicalStudy/: ClinicalStudy.tex
test_units/doc/report/first/: first.tex
test_units/test_Apply3x1DLutModule/: run_simulation.bat
test_units/test_Apply3x1DLutModule/input/: 24RGBL.raw
test_units/test_Apply3x1DLutModule/output/: RGBIN_frame0000_chan_2.txt  RGBLUT_description_raw.txt
test_units/test_Apply3x1DLutModule/outputTest/: RGBLUT_frame0000_chan_1.raw
test_units/test_Apply3x1DLutModule/xml/: test_Apply3x1DLutModule.xml
test_units/test_ClinicalStudy/: run_simulation.bat
test_units/test_ClinicalStudy/00_displaySimulation/: run_simulation.bat
test_units/test_ClinicalStudy/00_displaySimulation/xml/: test_DisplayLutModule.xml
test_units/test_ClinicalStudy/01_ssCHOSimulation/: run_simulation.bat
test_units/test_ClinicalStudy/01_ssCHOSimulation/outputTest/: testing_auc_snr.txt  testing_tpf_fpf.txt  training_auc_snr.txt  training_tpf_fpf.txt
test_units/test_ClinicalStudy/01_ssCHOSimulation/xml/: test_ssCHO.xml
test_units/test_ClinicalStudy/02_MRMCSimulation/: run_simulation.bat
test_units/test_ClinicalStudy/02_MRMCSimulation/outputTest/: shot1result_LG_multi.txt
test_units/test_ClinicalStudy/02_MRMCSimulation/xml/: test_ss_LG_MRMC.xml
test_units/test_DeltaE2000Module/: run_simulation.bat
test_units/test_DeltaE2000Module/input_ref/: run_simulation.bat
test_units/test_DeltaE2000Module/input_ref/input/: lut_green.txt
test_units/test_DeltaE2000Module/input_ref/output/: XYZOUTREF_frame0000_chan_1.txt  XYZOUTREF_frame0000_chan_2.txt  XYZOUTREF_frame0000_chan_3.txt
test_units/test_DeltaE2000Module/input_ref/xml/: test_InputRef.xml
test_units/test_DeltaE2000Module/input_test/: run_simulation.bat
test_units/test_DeltaE2000Module/input_test/input/: 24RGBLNoise.raw  help.txt
test_units/test_DeltaE2000Module/input_test/output/: RGBINTEST_frame0000_chan_1.txt  RGBINTEST_frame0000_chan_2.txt  RGBINTEST_frame0000_chan_3.txt  XYZOUTTEST_frame0000_chan_1.txt  XYZOUTTEST_frame0000_chan_2.txt  XYZOUTTEST_frame0000_chan_3.txt
test_units/test_DeltaE2000Module/input_test/xml/: test_InputTest.xml
test_units/test_DeltaE2000Module/outputTest/: dE2000_frame0000_chan_1.txt
test_units/test_DeltaE2000Module/xml/: test_DeltaE2000Module.xml
test_units/test_DisplayLutModuleNew/: run_simulation.bat
test_units/test_DisplayLutModuleNew/input/: 0000.raw  0000_description_raw.txt  gray.csv
test_units/test_DisplayLutModuleNew/output/: GRAYGSDF_frame0000_chan_2.txt  VIDEOCARD_frame0000_chan_3.txt
test_units/test_DisplayLutModuleNew/xml/: test_DisplayLutModule.xml
test_units/test_Rgb2XYZDisplayModule/: run_simulation.bat
test_units/test_Rgb2XYZDisplayModule/input/: blue.csv  cyan.csv  gray.csv  green.csv  help.txt  magenta.csv  pink.raw  red.csv  yellow.csv
test_units/test_Rgb2XYZDisplayModule/output/: init_raw_description_raw.txt  init_txt_frame0000_chan_1.txt  init_txt_frame0000_chan_2.txt  raw_description_raw.txt  raw_frame0000_chan_3.raw  txt_frame0000_chan_3.txt
test_units/test_Rgb2XYZDisplayModule/outputTest/: init_raw_frame0000_chan_1.raw  init_raw_frame0000_chan_2.raw  init_raw_frame0000_chan_3.raw  init_txt_frame0000_chan_3.txt  raw_frame0000_chan_1.raw  raw_frame0000_chan_2.raw  txt_frame0000_chan_1.txt  txt_frame0000_chan_2.txt
test_units/test_Rgb2XYZDisplayModule/xml/: test_Rgb2XYZDisplayModule.xml
test_units/test_SRgbDisplayModule/: run_simulation.bat
test_units/test_SRgbDisplayModule/input/: help.txt
test_units/test_SRgbDisplayModule/output/: sRGB2XYZD50_description_raw.txt  sRGB2XYZD50_frame0000_chan_1.raw
test_units/test_SRgbDisplayModule/outputTest/: sRGB2XYZD50_frame0000_chan_2.raw  sRGB2XYZD50_frame0000_chan_3.raw  sRGB_description_raw.txt
test_units/test_SRgbDisplayModule/xml/: test_SRgbDisplayModule.xml
test_units/vct/: mtgp32-ocl-kernels.cl  opencl-kernels-common.h
vct/build_opensrc/: Dependencies.cmake  ModulesList.cmake
vct/cmake/: CMakeLists.txt  Common_Macros.cmake
vct/cmake_modules/: CudaConfig.cmake  FindOpenCL.cmake
vct/src/: main.cpp
vct/src/Container/: Channel.cpp  Channel.h  DSContainer.cpp  DSContainer.h  FactoryModule.h  Module.cpp  Module.h  OpenCLErrorStrings.cpp  OpenCLErrorStrings.h  OpenCLHostTypes.h  OpenCLManager.cpp  OpenCLManager.h  TimeLimit.h  TypeTraits.cpp  TypeTraits.h
vct/src/Container/DataExchanger/: ContainerExchanger.cpp  ContainerExchanger.h  UtilitiesExchanger.cpp  UtilitiesExchanger.h  UtilitiesInterface.cpp  UtilitiesInterface.h
vct/src/Container/ErrorManagement/: ErrorLogger.cpp  ErrorLogger.h  MevicLogger.cpp  MevicLogger.h
vct/src/Container/SuperXML/: AbstractParameter.h  AbstractSimulation.cpp  AbstractSimulation.h  Chain.cpp  Chain.h  FactoryParameter.cpp  FactoryParameter.h  InOutManagement.cpp  InOutManagement.h  Iterations.cpp  Iterations.h  Parallel.cpp  Parallel.h  ParamBasic.cpp  ParamBasic.h  ParamIt.cpp  ParamIt.h  ParamItFormatted.cpp  ParamItFormatted.h  ParamStar.cpp  ParamStar.h  ParamStep.cpp  ParamStep.h  ParamString.cpp  ParamString.h  Pipeline.cpp  Pipeline.h  Simulation.cpp  Simulation.h  SuperMEVICXML.cpp  SuperMEVICXML.h  main.cpp
vct/src/Dependencies/Endianness/: Endianness.h
vct/src/Dependencies/FileFinder/: FileFinder.cpp  FileFinder.h
vct/src/Dependencies/HotellingObserver/: ChannelFilter.cpp  ChannelFilter.h  channel_laguerre.h  channel_laguerre1d.c  channel_laguerre2d.c  chotelling.c  iq.h  (+4 more)
vct/src/Modules/: makeBuildFull.bat
(+1122 files in other folders)
